Fixing accessibility color contrast issues

--- a/src/app/components/main-links/main-links.component.scss
+++ b/src/app/components/main-links/main-links.component.scss
@@ -17,7 +17,7 @@
   padding-top: 0.1rem;
   span {
     font-size: 0.8125rem;
-    color: hsla(0, 0%, 0%, 0.5);
+    color: var(--clr-grey);
     display: block;
     margin-top: 1.06rem;
     padding-bottom: 1.38rem;
